<resources>
    <string name="app_name">NWU MOBILE</string>
    <string name="nwu_number">NWU Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="welcome">welcome</string>
    <string name="welcome_lecturer">welcome lecturer</string>
    <string name="welcome_student">welcome student</string>
    <string name="profile">Student Profile</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="lecturer_profile">Lecturer Profile</string>


</resources>
